# MobileForensic-zipgrep

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  inspector-template.rs  inspectors.md  output-and-offsets.md  roadmap.md  workflow.md
src/: cli.rs  engine.rs  export.rs  fast.rs  filter.rs  lib.rs  main.rs  models.rs  output.rs  run.rs  search.rs  zip.rs
src/inspect/: csv.rs  json.rs  mod.rs  plist.rs  sqlite.rs  txt.rs  xml.rs
src/inspect/media/: aac.rs  aiff.rs  amr.rs  avi.rs  bmp.rs  caf.rs  cr2.rs  dng.rs  flac.rs  flv.rs  gif.rs  heif.rs  ico.rs  jpeg.rs  m4a.rs  m4v.rs  mkv.rs  mod.rs  mov.rs  mp3.rs  mp4.rs  mpeg.rs  nef.rs  ogg.rs  opus.rs  png.rs  threegp.rs  tiff.rs  wav.rs  webm.rs  webp.rs  wma.rs  wmv.rs
src/preset/: fast.rs  mod.rs
src/search/: content.rs  mod.rs  scan.rs
tests/: engine.rs  export.rs  inspect.rs  output.rs  parser.rs  plist_inspect.rs  search.rs  sqlite_inspect.rs
tests/common/: mod.rs
tests/fixtures/: blob.sqlite  messages.sqlite  sample.bplist  sample.plist
