[package]
name = "mf-zipgrep"
version = "0.1.0"
edition = "2026"
description = "Fast, forensic-aware regex search inside mobile-acquisition ZIP archives."
keywords = ["forensics", "zip", "grep", "search", "mobile"]
categories = ["command-line-utilities", "filesystem"]
license = "Apache-2.0"
repository = "https://github.com/Ben0x0a/MobileForensic-zipgrep"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
flate2 = "1.1.9"
memmap2 = "0.9.10"
quick-xml = "0.40.1"
rayon = "1.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
